# content-lab-backend-search

./: LICENSE  README.md  working.md
backend/: _vector_search_idx_creator.py  main.py  pyproject.toml  test_embeddings.py
backend/bedrock/: anthropic_chat_completions.py  client.py  llm_output.py  writing_assistant.py
backend/db/: mdb.py
backend/draft/: Search_Tool.ipynb
backend/embeddings/: process_embeddings.py  test_embeddings.py
backend/routers/: content.py  drafts.py  scheduler.py  services.py
backend/scheduler/: data_scheduler.py  test.py
backend/scheduler_job/: data_scheduler.py  test.py
backend/scrapers/: news_scraper.py  social_listening.py
backend/search_topics/: topic_search.py
